--- a/films-data-table/src/app/film-detail/film-detail.component.html
+++ b/films-data-table/src/app/film-detail/film-detail.component.html
@@ -1,1 +1,9 @@
-<p>film-detail works!</p>
+<h1>{{filmDetails.title}}</h1>
+<h2>{{filmDetails.tagline}}</h2>
+<img src="https://image.tmdb.org/t/p/w500/{{filmDetails.poster_path}}" alt="poster image">
+<h2>Overview:</h2>
+<p>{{filmDetails.overview}}</p>
+<div *ngIf="filmDetails.homepage">
+  <h2>Do you want to know more? Visit the official site:</h2>
+  <a href="{{filmDetails.homepage}}">{{filmDetails.homepage}}</a>
+</div>
