--- a/films-data-table/src/app/films/films.component.html
+++ b/films-data-table/src/app/films/films.component.html
@@ -15,7 +15,7 @@
     <td>
       <a [routerLink]="['/details']" [queryParams]="{ id: film.id}">See details</a>
       <button (click)="deleteFilm(film.id)">Remove film</button>
-      <button>Modify film</button>
+      <button [routerLink]="['/details-edit']" [queryParams]="{ id: film.id}">Modify film</button>
     </td>
   </tr>
 </table>
