--- a/films-data-table/src/app/film-edit/film-edit.component.html
+++ b/films-data-table/src/app/film-edit/film-edit.component.html
@@ -1,8 +1,9 @@
+<h2>You can modify the following data:</h2>
 <form [formGroup]="filmForm" (ngSubmit)="submit()">
   <label for="title">Title:</label>
   <input type="text" id="title" name="title" formControlName="title" required>
 
   <label for="overview">Overview:</label>
   <textarea name="overview" id="overview" cols="30" rows="5" formControlName="overview"></textarea>
-  <button type="submit">GUARDAR</button>
+  <button type="submit">SAVE</button>
 </form>
