--- a/films-data-table/src/styles.scss
+++ b/films-data-table/src/styles.scss
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+table {
+  margin: auto;
+  border-collapse: collapse;
+}
+
+th {
+  font-size: 1.5rem;
+  padding: 0 1rem;
+}
+
+tr {
+  height: 2.5rem;
+  border-bottom: 1px solid gray;
+  &:first-child{
+    background-color: cadetblue;
+  }
+  &:nth-child(even){
+    background-color: lightgray;
+  }
+}
+
+td {
+  text-align: center;
+  padding: 0.5rem 1rem;
+}
+
+button {
+  padding: 0.5rem;
+  background-color: rgb(160, 206, 209);
+  &:hover {
+    background-color: lightgray;
+  }
+}
+
+form {
+  display: flex;
+  flex-flow: column;
+  align-items: baseline;
+}
+
+input {
+
+}
